--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,147 @@
+@import url("https://fonts.googleapis.com/css2?family=Releway:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap");
+@import 'node_modules/modern-normalize/modern-normalize.css';
+
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+
+/* declaracion de variables */
+
+:root{
+    --primary-white-color: #212121;
+    --primary-white-color: #ffffff;
+    --primary-text-color:  #757575;
+
+    --accent-color:     #2196f3;
+    --background-black: #21303a;
+    --background-gray:  #f5f4fa;
+    --button-filter:    #f5f4fa;
+    --button-primary-hover:  #188ce8;
+    --logo-black:            #000000;
+    --text-white-opacy:      #ffffff99;
+}
+
+body{
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    color: var(--primary-text-color);
+    background-color: var(--primary-white-color);
+    letter-spacing: 0.03em;
+    margin: auto;
+
+    height: 2410px;
+    width: 1600px;
+    left: -1704px;
+    top: -1175px;
+    border-radius: 0px;
+
+    
+}
+
+.Web-logo{
+    color: var(--accent-color);
+    font-family: "Raleway", sans-serif;
+    font-size: 26px;
+    font-weight: 700;
+    line-height: 1.2;
+    
+    
+    
+}
+
+.container{
+    width: 1200px;
+    margin: 0 auto;
+}
+
+/* Index html */
+
+header{
+    display: flex;
+}
+
+.main-button{
+font-size: 16px;
+background-color: var(--accent-color);
+color: var(--primary-white-color);
+text-transform: capitalize;
+}
+.main-button:hover{
+    background-color: var(--button-primary-hover);
+}
+
+.header-star {
+border-bottom: 1px solid #ececec;
+}
+
+.header-menu{
+display: flex;
+}
+
+.header-list{
+    width: 34%;
+    height: 16px;
+    left: 453px;
+    padding: 20px;
+    margin: auto;
+    display: flex;
+    color: #2196F3;
+    justify-content: center;
+    align-items: center;
+}
+    
+.header-link{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.02em;
+    text-align: center;
+}
+
+.contact {
+    margin: auto;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 33%;
+}
+
+.tocontact{
+    padding: 50px;
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 16px;
+    letter-spacing: 0.02em;
+    text-align: left;
+}
+
+:hover,
+:focus,{
+    color: var(--accent-color);
+}
+
+
+
+
 ul{
     list-style: none;
 }
+
+a{
+    text-decoration: none;
+}
+
+
+/* portfolio */
+
+/*.butt-1:hover{
+color: #f63;
+}*/
