diseño en footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -162,7 +162,30 @@ a {
         color: var(--primary-text-color);
 }
 
-.
+
+
+.location-link {
+    color: var(--primary-white-color);
+    }
+    
+.location-link:hover{
+    color: var(--button-primary-hover);
+}
+
+.link-contact{
+    color: var(--text-white-opacy);
+}
+
+.link-contact:hover {
+    color: var(--button-primary-hover);
+}
+
+footer{
+    background-color: var(--background-black);
+    padding: 10px;
+}
+
+
 
 /* portfolio */
 
