--- a/css/styles.css
+++ b/css/styles.css
@@ -189,6 +189,45 @@ footer{
 
 /* portfolio */
 
+.butt-first{
+    background: var(--accent-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
+}
+
+.text{
+    font-size: 16px;
+    line-height: 26px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--primary-white-color);
+}
+
+.butt-second{
+    background: #F5F4FA;
+    border-radius: 4px;
+}
+
+.text-black{
+    font-size: 16px;
+    line-height: 26px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--primary-title-color);
+}
+
+.title-image {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 36px;
+    letter-spacing: 0.06em;
+    color: var(--primary-title-color);
+}
+
+.description {
+    color: #757575;
+}
+
 /*.butt-1:hover{
 color: #f63;
 }*/
